docs/releases/platform/1.0.0/PRODUCT-CATALOGUE.md
# APZHUB Platform 1.0.0 — Product Catalogue

> **Programme:** APZHUB-PORTFOLIO-001 (Platform Release 1.0)  
> **Authority:** [COMMERCIAL-PRODUCT-CATALOGUE](../../../product-management/COMMERCIAL-PRODUCT-CATALOGUE.md) · product evidence packs

| Product          | User-facing             | SemVer    | Class                    | Evidence                                           |
| ---------------- | ----------------------- | --------- | ------------------------ | -------------------------------------------------- |
| APZ Projects     | Projects                | **1.1.0** | Production (limitations) | [projects/1.1.0](../../projects/1.1.0/README.md)   |
| APZ Time         | Time                    | **1.0.0** | Production (limitations) | [time/1.0.0](../../time/1.0.0/README.md)           |
| APZ Support      | Support                 | **1.0.0** | PRWL                     | [support/1.0.0](../../support/1.0.0/README.md)     |
| APZ Documents    | Documents               | **1.0.0** | PRWL                     | [documents/1.0.0](../../documents/1.0.0/README.md) |
| APZ TCMS         | Testing / Certification | **1.0.0** | PRWL                     | [tcms/1.0.0](../../tcms/1.0.0/README.md)           |
| APZ Analytics    | Analytics               | **1.0.0** | PRWL                     | [analytics/1.0.0](../../analytics/1.0.0/README.md) |
| APZ Workflow     | Workflow                | **1.0.0** | PRWL                     | [workflow/1.0.0](../../workflow/1.0.0/README.md)   |
| APZ Law Platform | Law Platform            | **1.0.0** | PRWL                     | [law/1.0.0](../../law/1.0.0/README.md)             |

**Platform product SemVer:** APZHUB **1.0.0** (this pack).
